# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ans_standard/notification.gni")
import("//build/ohos.gni")

cflags = []

config("native_module_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "APP_LOG_TAG = \"ANS_STANDARD\"",
    "LOG_DOMAIN = 0xD001800",
  ]
}

ohos_shared_library("notification") {
  include_dirs = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include",
    "//foundation/aafwk/standard/interfaces/kits/napi/aafwk/inner/napi_common",
    "//foundation/ace/napi/interfaces/kits/napi",
    "//foundation/multimedia/image_standard/interfaces/kits/js/common/include/",
    "include",
    "//third_party/node/src",
    "//third_party/libuv/include",
    "//third_party/jsoncpp/include",
  ]

  configs = [ ":native_module_config" ]

  sources = [
    "src/cancel.cpp",
    "src/common.cpp",
    "src/constant.cpp",
    "src/display_badge.cpp",
    "src/disturb_mode.cpp",
    "src/enable_notification.cpp",
    "src/get_active.cpp",
    "src/init.cpp",
    "src/publish.cpp",
    "src/remove.cpp",
    "src/slot.cpp",
    "src/subscribe.cpp",
    "src/unsubscribe.cpp",
  ]

  ldflags = [ "-Wl,-rpath=/system/lib/module/multimedia/" ]

  deps = [
    "${frameworks_path}/ans/core:ans_core",
    "${frameworks_path}/ans/native:ans_innerkits",
    "${frameworks_path}/wantagent:wantagent_innerkits",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/aafwk/standard/interfaces/kits/napi/aafwk/inner/napi_common:napi_common",
    "//foundation/ace/napi:ace_napi",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image",
    "//third_party/jsoncpp:jsoncpp",
    "//third_party/libuv:uv_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "appexecfwk_standard:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "notification"
  part_name = "ans_standard"
}
