# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ans_standard/notification.gni")
import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "ans_standard/unittest"

ohos_unittest("ans_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    ".",
    "include",
    "//foundation/appexecfwk/standard/libs/libeventhandler/src",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "/${services_path}/ans/include",
    "${services_path}/ans/test/unittest/mock/include",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter/include/autils",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/distributeddatafwk/include",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter/include/log",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/distributeddatafwk/src",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter/include/dfx",
    "//developtools/bytrace_standard/interfaces/innerkits/native/include",
  ]

  sources = [
    "${services_path}/ans/src/advanced_notification_service.cpp",
    "${services_path}/ans/src/advanced_notification_service_ability.cpp",
    "${services_path}/ans/src/disturb_filter.cpp",
    "${services_path}/ans/src/notification_preferences.cpp",
    "${services_path}/ans/src/notification_preferences_database.cpp",
    "${services_path}/ans/src/notification_preferences_info.cpp",
    "${services_path}/ans/src/notification_slot_filter.cpp",
    "${services_path}/ans/src/notification_subscriber_manager.cpp",
    "${services_path}/ans/src/permission_filter.cpp",
    "${services_path}/ans/src/system_event_observer.cpp",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/distributeddatafwk/src/ikvstore_snapshot.cpp",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter/autils/src/constant.cpp",
    "advanced_notification_service_ability_test.cpp",
    "advanced_notification_service_test.cpp",
    "disturb_filter_test.cpp",
    "mock/blob.cpp",
    "mock/distributed_kv_data_manager.cpp",
    "mock/mock_bundle_manager_helper.cpp",
    "mock/mock_event_handler.cpp",
    "mock/mock_ipc.cpp",
    "mock/mock_single_kv_store.cpp",
    "notification_preferences_database_test.cpp",
    "notification_preferences_test.cpp",
    "notification_slot_filter_test.cpp",
    "notification_subscriber_manager_test.cpp",
    "permission_filter_test.cpp",
  ]

  configs = [ "//utils/native/base:utils_config" ]

  deps = [
    "${core_path}:ans_core",
    "${frameworks_path}/ans/native:ans_innerkits",
    "${frameworks_path}/wantagent:wantagent_innerkits",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  subsystem_name = "notification"
  part_name = "ans_standard"
}

group("unittest") {
  testonly = true
  deps = []

  deps += [ ":ans_unit_test" ]
}
